# ipyMolecularNodes

./: .gitignore  README.md  debug.ipynb  example.ipynb  example_interactive.ipynb  example_mol_nodes.ipynb  interactive_example.ipynb  minimal.ipynb  package-lock.json  package.json  pyproject.toml  static_example.ipynb  static_example_transparent.ipynb  static_tldraw_canvas.ipynb  using_context_loader.ipynb  without_widget.ipynb
js/: interactive_widget.jsx  styles.css  widget.jsx  widget2.jsx
src/ipyblender_experimental/: __init__.py  render_to_gltf_model.py  render_to_image.py
src/ipymolecularnodes/: __init__.py  render_to_gltf_model.py  render_to_image.py
src/ipymolecularnodes/static/: interactive_widget.js
