[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ipymolecularnodes"
version = "0.2.0"
readme = "README.md"

requires-python = "~=3.10.0"
dependencies = [
    "anywidget",
    "watchfiles",
    "ipykernel",
    "MolecularNodes"
]

[tool.hatch.build]
only-packages = true
artifacts = ["src/ipymolecularnodes/static/*"]


[tool.hatch.build.hooks.jupyter-builder]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = ["src/ipymolecularnodes/static/widget.js"]
skip-if-exists = ["src/ipymolecularnodes/static/widget.js"]
dependencies = ["hatch-jupyter-builder>=0.5.0"]
